apps/media/bazarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bazarr
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: cluster.benwoodward.cloud.
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway
  hostnames:
    - bazarr.benwoodward.cloud
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: bazarr
          port: 6767
